# python-kivy-vocabulary-app

./: .gitignore  CMakeLists.txt  Info.plist  README.md  b1_word_from_cambridge.json
VocaCpp/: CMakeLists.txt
VocaCpp/src/: AppController.cpp  AppController.h  main.cpp
VocaCpp/src/models/: AppState.cpp  AppState.h
VocaCpp/src/persistence/: ProgressStore.h
VocaCpp/src/services/: STTService.cpp  STTService.h  TTSService.cpp  TTSService.h
VocaCpp/src/ui/: AddNewWordsPopup.qml  Dashboard.qml  ExpressionsPopup.qml  LearnPopup.qml  LearnedWordsPopup.qml  Main.qml  NewWordsFromTextPopup.qml  ReviewPopup.qml  WordEditPopup.qml  WordListPopup.qml
scripts/: nllb_translate.py  pdf_extract_text.py
src/: AppController.cpp  AppController.h  main.cpp
src/persistence/: ProgressStore.cpp
src/services/: STTService.cpp  TTSService.h
src/ui/: AddNewWordsPopup.qml  CorrectWordPopup.qml  Dashboard.qml  ExpressionsPopup.qml  LearnPopup.qml  LearnedWordsPopup.qml  Main.qml  NewWordsFromTextPopup.qml  PdfModePopup.qml  ReviewPopup.qml  TranslatePopup.qml  WordEditPopup.qml  WordListPopup.qml
